@@ -34,5 +34,5 @@
 ############################################################################
 
 MTD_ASRCS  =
-MTD_CSRCS  = m25px.c
+MTD_CSRCS  = ftl.c m25px.c
 
