@@ -985,4 +985,9 @@
 	* arch/hc: Adding framework to support m68hc11/12
 	* configs/demo9s12ne64: Configuration to support Freescale DEMO9S12NE64
 	  development board (MC9S12NE64 m68hcs12 processor).
+	* drivers/mtd/ftl.c - A FLASH translation layer (FTL) has been implemented.
+	  This layer will convert a FLASH MTD interface into a block driver that
+	  can be used with any file system.  Good performance of this layer will
+	  depend upon functioning write buffer support!
+	  NOTE: FTL support is untested as of the initial check-in.
 
